Clean up usage of third-party libraries (#1710)